# porcupyne

./: .pylintrc  README.md  audio.py  instrument.py  island_parser.py  lattice_visualizer.py  note.py  parser.py  parser_11limit.py  parser_5limit.py  parser_7_11.py  pylintrc  setup.cfg  temperament.py  util.py
scripts/: barbados_pump.py  build_routines.py  chords.py  giant_steps.py  lattice_picture.py  magic_pump.py  orgone_pump.py  pergen_5limit.py  plot_spectrogram.py  porcupine_pump.py  spectrogram_video.py  srutal_pump.py
src/porcupyne/: audio.py  chord.py  graphics.py  instrument.py  keyboard_visualizer.py  lattice_visualizer.py  noise.py  note.py  percussion.py  piano_roll_visualizer.py  pixel_art.py  temperament.py  util.py
tests/: test_audio.py  test_parser.py
