[metadata]
name = porcupyne
version = 0.0.1
author = Lumi Pakkanen
author_email = lumi.pakkanen@gmail.com
description = A module for working with xenharmonic music including audio rendering and visuals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frostburn/porcupyne
project_urls =
    Bug Tracker = https://github.com/frostburn/porcupyne/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
